# phosphorus

./: .gitignore  AUTHORS  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  gwallpaper.c  phosphorus.c
data/: Makefile.am  icon-theme-installer  menus.ui  org.unia.phosphorus.gschema.xml  org.unia.phosphorus.gschema.xml.in  phosphorus-plugin.pc.in  phosphorus.desktop  phosphorus.desktop.in  phosphorus.desktop.in.in  phosphorus.gresource.xml  phosphorus.pc.in  thumbview.ui  window.ui
data/icons/: Makefile  Makefile.am  Makefile.in
data/ui/: preferences.ui  thumbview.ui  window.ui
plugins/: Makefile.am
plugins/gnome/: GnomeWallpaperSetter.plugin.in  Makefile.am  __init__.py
plugins/xlib/: Makefile.am  XLibWallpaperSetter.c  XLibWallpaperSetter.h  XLibWallpaperSetter.plugin.in
po/: LINGUAS  Makefile.in.in.bak  Makevars  POTFILES.in  POTFILES.skip  it.po  master  nl.po  phosphorus.pot  sv.po
src/: Makefile.am  background.c  background.h  callbacks.c  callbacks.h  gsettings.h  main.c  ph-application.c  ph-application.h  ph-backend-gnome.c  ph-backend-gnome.h  ph-backend.c  ph-backend.h  ph-dir-store.c  ph-dir-store.h  ph-dir.c  ph-dir.h  ph-plugin-manager.c  ph-plugin-manager.h  ph-preferences-dialog.c  ph-preferences-dialog.h  ph-thumbview.c  ph-thumbview.h  ph-window.c  ph-window.h  phosphorus.c  phosphorus.h  ui.c  ui.h  util.c  util.h
src/plugin/: Makefile.am  ph-plugin.c  ph-plugin.h
